--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,6 +15,21 @@
         />
       </picture>
     </a>
+    <button type="button" class="menu__open js-open-menu">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="22"
+        height="13"
+        viewBox="0 0 22 13"
+        fill="none"
+      >
+        <path
+          d="M22 12.5224H0V10.5782H22V12.5224ZM22 7.662H0V5.71783H22V7.662ZM22 2.80159H0V0.857422H22V2.80159Z"
+          fill="white"
+          fill-opacity="0.8"
+        />
+      </svg>
+    </button>
 
     <ul class="header__nav-list">
       <li class="header__item">
