--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./base/reset";
 @import "./base/common";
 @import "./sections/header";
+@import "./modals/menu";
 @import "./sections/hero";
 @import "./sections/premium";
 @import "./sections/capable";
