--- a/src/sass/modals/_menu.scss
+++ b/src/sass/modals/_menu.scss
@@ -13,10 +13,12 @@
 
   &__box {
     display: flex;
+    align-items: center;
   }
 
   &__logo {
-    margin-bottom: 58px;
+    margin-top: 6px;
+    margin-bottom: 52px;
   }
 
   &__open {
@@ -33,6 +35,7 @@
     @media screen and (min-width: 320px) {
       background-color: transparent;
       margin-left: auto;
+      margin-bottom: auto;
     }
     @media screen and (min-width: 1200px) {
       display: none;
