--- a/src/sass/sections/_capable.scss
+++ b/src/sass/sections/_capable.scss
@@ -14,9 +14,16 @@
   .capable__list {
     display: flex;
     flex-direction: column;
-    row-gap: 20px;
-    flex-wrap: wrap;
-    height: 127px;
+
+@media screen and (min-width: 320px) {
+  gap: 16px;
+}
+
+    @media screen and (min-width: 1320px) {
+      row-gap: 20px;
+      flex-wrap: wrap;
+      height: 127px;
+    }
   }
   .capable__item {
     display: flex;
@@ -29,5 +36,13 @@
     font-weight: 400;
     line-height: 145%; /* 29px */
     margin-left: 23px;
+
+    @media screen and (min-width: 320px) {
+      font-size: 14px;
+      line-height: 125%; /* 17.5px */
+    }
+    @media screen and (min-width: 1320px) {
+      font-size: 16px;
+    }
   }
 }
