--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -94,6 +94,7 @@
     @media screen and (min-width: 320px) {
       width: 280px;
       height: 58px;
+      margin-bottom: 32px;
     }
     @media screen and (min-width: 768px) {
       width: 294px;
