--- a/src/sass/sections/_premium.scss
+++ b/src/sass/sections/_premium.scss
@@ -1,42 +1,101 @@
 .premium {
   padding-top: 176px;
+  display: flex;
+
+  &__img {
+
+    @media screen and (max-width: 767px) {
+      margin-top: 32px;
+    }
+
+    @media screen and (min-width: 768px) {
+      position: absolute;
+      left: 0;
+      width: 304px;
+      height: 490px;
+    }
+
+    @media screen and (min-width: 1320px) {
+      width: 490px;
+      height: 516px;
+    }
+  }
 
   &__box {
     display: flex;
-    justify-content: space-between;
+    justify-content: end;
+
+    @media screen and (max-width: 767px) {
+      flex-direction: column;
+    }
   }
 
   &__list {
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 32px;
+    position: relative;
+
+    @media screen and (min-width: 1320px) {
+      margin-bottom: 29px;
+    }
   }
 
   &__title {
-    padding-bottom: 10px;
-    width: 471px;
     color: #e7e7e7;
-    font-size: 54px;
     font-weight: 600;
-    line-height: 120%; /* 64.8px */
-    letter-spacing: 1.08px;
+    line-height: 120%;
     text-transform: uppercase;
+
+    @media screen and (min-width: 320px) {
+      font-size: 24px;
+      letter-spacing: 0.48px;
+      width: 234px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 30px;
+      letter-spacing: 0.6px;
+      width: 300px;
+    }
+    @media screen and (min-width: 1320px) {
+      font-size: 54px;
+      letter-spacing: 1.08px;
+      width: 550px;
+    }
   }
 
   &__text {
     color: #e7e7e7;
-    font-size: 28px;
     font-weight: 600;
     line-height: 125%; /* 35px */
-    margin-bottom: 20px;
+
+    @media screen and (min-width: 320px) {
+      font-size: 20px;
+      margin-bottom: 16px;
+    }
+    @media screen and (min-width: 1320px) {
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
   }
 
   &__description {
-    width: 510px;
     color: rgba(255, 255, 255, 0.8);
     font-size: 20px;
-    font-style: normal;
     font-weight: 400;
     line-height: 145%; /* 29px */
+
+    @media screen and (min-width: 320px) {
+      font-size: 14px;
+      line-height: 125%; /* 17.5px */
+      width: 280px;
+    }
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+      width: 294px;
+    }
+    @media screen and (min-width: 1320px) {
+      width: 440px;
+    }
   }
 }
