--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -3,11 +3,22 @@
         <h2 class="faq__subtitle">FAQ</h2>
         <ul class="faq__list">
             <li class="faq__item">
-                <p class="faq__numb">01</p>
-                <h3 class="faq__text-1">How to pair with a mobile device?</h3>
-                <div class="faq__box-1">
-                    <button class="faq__button" type="button">?</button>
-                </div>
+                <details>
+                    <summary>
+                        <p class="faq__numb">01</p>
+                        <h3 class="faq__text-1">How to pair with a mobile device?</h3>
+                        <button class="faq__button" type="button">?</button>
+                    </summary>
+                    <div class="content">
+                        <p class="fine">Firstly, make sure your headphones are turned on with a single press of the top
+                            button on the back of the right earbud. Then press and hold the power button for 3 seconds
+                            to put the headphones into pairing mode. Please note that if you connect the headphones for
+                            the first time, they will automatically turn on immediately in this pairing mode. Voice
+                            prompts will provide you with additional instructions. We recommend that you use the Bose
+                            Music app to complete the pairing process, however you can also use the Bluetooth settings
+                            on your device.</p>
+                    </div>
+                </details>
                 <hr class="faq__line" />
             </li>
             <li class="faq__item">
