--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container header__box">
     <a href="./index.html">
       <picture>
