--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,7 +10,7 @@
         </div>
         <h1 class="hero__title">Headphones Bose NC 700</h1>
         <button class="hero__button">
-          <a class="hero__link" href="">order</a>
+          <a class="hero__link" href="#">order</a>
         </button>
       </li>
       <li class="hero__item">
