--- a/src/partials/menu.html
+++ b/src/partials/menu.html
@@ -31,6 +31,9 @@
       </button>
     </div>
     <ul class="menu__list">
+      <li class="header__item">
+        <a class="header__text" href="#header">start</a>
+      </li>
       <li class="menu__item">
         <a class="menu__text" href="#capable">Characteristics</a>
       </li>
