--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -1,8 +1,23 @@
 .header {
   display: flex;
-  background-color: #191919;
-  padding-top: 64px;
-  padding-bottom: 74px;
+  background-color: transparent;
+  position: fixed;
+  width: 100%;
+  overflow: scroll;
+  top: 0;
+  left: 0;
+
+ @media screen and (min-width: 320px) {
+  padding-top: 30px;
+ }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 50;
+  }
+
+  @media screen and (min-width: 1320px) {
+    padding-top: 64px;
+  }
 
   &__box {
     display: flex;
