--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -1,7 +1,18 @@
 .hero {
+  @media screen and (min-width: 320px) {
+    padding-top: 116px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 136px;
+  }
+
+  @media screen and (min-width: 1320px) {
+    padding-top: 156px;
+  }
   &__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
   }
 
   &__list {
