acordeon-slider-ended

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -6,7 +6,7 @@
                 <details>
                     <summary>
                         <p class="faq__numb">01</p>
-                        <h3 class="faq__text-1">How to pair with a mobile device?</h3>
+                        <h3 class="faq__text">How to pair with a mobile device?</h3>
                         <button class="faq__button" type="button">?</button>
                     </summary>
                     <div class="content">
@@ -19,35 +19,58 @@
                             on your device.</p>
                     </div>
                 </details>
-                <hr class="faq__line" />
+                <div class="faq__line"></div>
             </li>
             <li class="faq__item">
-                <p class="faq__numb">02</p>
-                <h3 class="faq__text-2">
-                    What is the wireless range of the Bose NC 700?
-                </h3>
-                <div class="faq__box-2">
-                    <button class="faq__button" type="button">?</button>
-                </div>
-                <hr class="faq__line" />
+                <details>
+                    <summary>
+                        <p class="faq__numb">02</p>
+                        <h3 class="faq__text">What is the wireless range of the Bose NC 700?</h3>
+                        <button class="faq__button" type="button">?</button>
+                    </summary>
+                    <div class="content">
+                        <p class="fine">Bose Headphones 700 have a Bluetooth range of up to 9 metres and can pair with
+                            two
+                            devices at once – meaning you can quickly go from listening to a playlist on your phone to
+                            taking a conference call on your laptop.</p>
+                    </div>
+                </details>
+                <div class="faq__line"></div>
             </li>
             <li class="faq__item">
-                <p class="faq__numb">03</p>
-                <h3 class="faq__text-3">
-                    How do I fold the Bose NC 700 headphones for storage?
-                </h3>
-                <div class="faq__box-3">
-                    <button class="faq__button" type="button">?</button>
-                </div>
-                <hr class="faq__line" />
+                <details>
+                    <summary>
+                        <p class="faq__numb">03</p>
+                        <h3 class="faq__text">How do I fold the Bose NC 700 headphones for storage?</h3>
+                        <button class="faq__button" type="button">?</button>
+                    </summary>
+                    <div class="content">
+                        <p class="fine">How do I fold the Bose Noise Cancelling Headphones 700 for storage? Bose Noise
+                            Cancelling Headphones 700 utilize a hidden pivot design to quickly fold flat with one twist
+                            of
+                            the earcups, and store neatly in a thin, tapered hard case.</p>
+                    </div>
+                </details>
+                <div class="faq__line"></div>
             </li>
             <li class="faq__item">
-                <p class="faq__numb">04</p>
-                <h3 class="faq__text-4">Does the guarantee work internationally?</h3>
-                <div class="faq__box-4">
-                    <button class="faq__button" type="button">?</button>
-                </div>
-                <hr class="faq__line" />
+                <details>
+                    <summary>
+                        <p class="faq__numb">04</p>
+                        <h3 class="faq__text">Does the guarantee work internationally bose nc 700?</h3>
+                        <button class="faq__button" type="button">?</button>
+                    </summary>
+                    <div class="content">
+                        <p class="fine">If you lost your original receipt, Bose might deny your claim. It's also
+                            important
+                            to note that Bose doesn't allow you to transfer the limited warranty. Only the original
+                            buyer or
+                            the person who receives the device as a gift can use the warranty. You won't be able to gift
+                            a
+                            used device with the limited warranty intact.</p>
+                    </div>
+                </details>
+                <div class="faq__line"></div>
             </li>
         </ul>
     </div>
