--- a/src/partials/bose-nc.html
+++ b/src/partials/bose-nc.html
@@ -1,6 +1,6 @@
 <section class="bose-nc">
     <div class="container">
-        <ul class="bose-nc__flex">
+        <ul class="bose-nc__flex position">
             <li>
                 <h2 class="bose-nc__title">BOSE NC 700</h2>
                 <div class="bose-nc__format-button">
@@ -33,7 +33,7 @@
                         <path d="M1 21.4062L21 1.40625M21 1.40625L1 1.40625M21 1.40625L21 21.4062" stroke="#DF3D3A"
                             stroke-width="2" />
                     </svg>
-                    </div>
+                </div>
                 <div class="bose-nc__line"></div>
                 <div class="forms">
                     <h3 class="bose-nc__text">
@@ -43,7 +43,7 @@
                         <path d="M1 21.4062L21 1.40625M21 1.40625L1 1.40625M21 1.40625L21 21.4062" stroke="#DF3D3A"
                             stroke-width="2" />
                     </svg>
-                 </div> 
+                </div>
                 <div class="bose-nc__line"></div>
                 <h3 class="bose-nc__minitext">14 999 UAH</h3>
                 <button class="bose-nc__minibutton">
@@ -51,18 +51,98 @@
                 </button>
             </li>
             <li>
-                <div class="">
-                    <!-- <button id='prev' class="sliderBtn">&lt;
-                        <button id="next" class="sliderBtn">&gt;</button>
-                    </button> -->
-                    <div class="">
-                        <img class="bose-nc__img" src="./image/desktop/bose-nc-blakk@desktop-1x.webp" alt="">
-                    </div>
-                    <div class="">
-
+               <div id="slideContainer">
+                    <div class="slider">
+                        <div class="list">
+                            <div class="item slide show">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-blakk@desktop-1x.webp 1x, ./image/desktop/bose-nc-blakk@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-black@table-1x.webp 1x, ./image/table/bose-nc-black@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-black@phone-1x.webp 1x, ./image/phone/bose-nc-black@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-blakk@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                            <div class="item slide">
+                                <picture>
+                                    <source
+                                        srcset="./image/desktop/bose-nc-white@desktop-1x.webp 1x, ./image/desktop/bose-nc-white@desktop-2x.webp 2x"
+                                        media="(min-width: 1200px)">
+                                    <source
+                                        srcset="./image/table/bose-nc-white@table-1x.webp 1x, ./image/table/bose-nc-white@table-2x.webp 2x"
+                                        media="(min-width: 768px)">
+                                    <source
+                                        srcset="./image/phone/bose-nc-white@phone-1x.webp 1x, ./image/phone/bose-nc-white@phone-2x.webp 2x"
+                                        media="(min-width: 320px)">
+                                    <img src="./image/desktop/bose-nc-white@desktop-2x.webp" alt="">
+                                </picture>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </li>
         </ul>
+    </div>
     </div>
 </section>
