--- a/src/sass/sections/_header.scss
+++ b/src/sass/sections/_header.scss
@@ -1,6 +1,6 @@
 .header {
   display: flex;
-  background-color: transparent;
+  background-color: #191919;
   position: fixed;
   width: 100%;
   overflow: scroll;
